# squadro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  گزارش_فنی_اسکوا درو_AI.md
Include/: AIEngine.hpp  GameState.hpp  Piece.hpp  Position.hpp  Zobrist.hpp  utils.hpp
Src/: AIEngine.cpp  AIPlayer.cpp  Board.cpp  GameState.cpp  Heuristics.cpp  NetworkManager.cpp  Piece.cpp  TranspositionTable.cpp  Zobrist.cpp  main.cpp  utils.cpp
include/: AIPlayer.h  Board.h  Constants.h  GameState.h  GameStateHasher.h  Heuristics.h  Json.hpp  Move.h  MoveList.h  NetworkManager.h  Piece.h  TranspositionTable.h  httplib.h  move.h
scr/: AIPlayer.cpp  GameState.cpp  NetworkManager.cpp  main.cpp
src/: AIPlayer.cpp  Board.cpp  GameState.cpp  GameStateHasher.cpp  Heuristics.cpp  NetworkManager.cpp  TranspositionTable.cpp  main.cpp  test_ai.cpp
