cmake_minimum_required(VERSION 3.10)
project(test_SquadroAI)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS} ../include ../utils)
add_executable(test_gamestate test_gamestate.cpp ../src/GameState.cpp)
target_link_libraries(test_gamestate ${GTEST_LIBRARIES} pthread)
add_test(NAME TestGameState COMMAND test_gamestate)